# k8s-market-sentinel

./: .dockerignore  .env.example  .gitattributes  .gitignore  .sops.yaml  DECISIONS.md  Dockerfile  LICENSE  PROJECT_BRIEF.md  README.md  docker-compose.dev.yml  kustomization.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: quality_checks.yaml  tickers.yaml
db/migrations/: 0001_bronze.sql  0002_silver.sql  0003_gold.sql  0004_buffett_w5000.sql  0005_gold_dashboards.sql  0006_distributions.sql  0007_distribution_cuts.sql  0008_signal_backtest.sql  0009_data_quality.sql  0010_nav_crosscheck.sql
deploy/: DEPLOY_UBUNTU.md
deploy/gitops/argocd/: application-sentinel-local.yaml  application-sentinel-prod.yaml  repo-server-ksops-patch.yaml
deploy/gitops/local/: ksops-secrets.yaml  (+1 more)
deploy/grafana/: dashboards-provider.yaml  datasource-neon.yaml  datasource-prometheus.yaml
deploy/k8s/: cronjob-check-quality.yaml  cronjob-distributions.yaml  cronjob-fx.yaml  cronjob-macro.yaml  cronjob-nav-proxy.yaml  cronjob-nav.yaml  cronjob-prices.yaml  deployment-poller.yaml  grafana.yaml  job-migrate.yaml  namespace.yaml  prometheus.yaml  pushgateway.yaml
deploy/prometheus/: prometheus.yml
deploy/secrets/: sentinel-env.local.yaml  sentinel-env.prod.yaml
src/sentinel/: __init__.py  cli.py  config.py  db.py  market_hours.py  migrations.py  poller.py  quality.py
tests/: test_config.py  test_distributions_ingest.py  test_fx_ingest.py  test_intraday_ingest.py  test_macro_ingest.py  test_market_hours.py  test_nav_ingest.py  test_prices_ingest.py  test_quality.py
(+14 files in other folders)
